[Fix] Possible fix for mobile flickering

--- a/src/components/Content/content.module.css
+++ b/src/components/Content/content.module.css
@@ -57,6 +57,8 @@
 
 .sistemgas-hq-animate-in {
   animation: 4s cubic-bezier(0.33, 0.27, 0.58, 1) forwards sistemgas-hq-in;
+  left: 50%;
+  transform: translateX(-50%) translateY(calc(1 / 5 * 100vh + 5px));
 }
 
 .sistemgas-hq-force-end {
